<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_login_24dp"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/cart"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/action_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit"
        android:orderInCategory="100"
        android:title="@string/action_Edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/action_Logout"
        app:showAsAction="never" />
</menu>
