<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewHome"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:background="@android:color/black"
    android:fillViewport="true"
    android:gravity="top">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear1">

            <ImageView
                android:id="@+id/imgTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/twitterimage"
                android:src="@drawable/ic_twitter_white" />

            <ImageView
                android:id="@+id/imgInstgram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/instagramimage"
                android:src="@drawable/ic_instagram_white" />

            <TextView
                android:id="@+id/titleMiddleMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:padding="12dip"
                android:text="@string/social_text_msg"
                android:textColor="#ffffffff"
                android:textSize="@dimen/txt_img_over_size" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_below="@id/linear1">

            <com.sarvika.bmegantanative.util.ClickableViewPager
                android:id="@+id/pager"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="bottom"
                android:padding="10dip"
                app:centered="true"
                app:fillColor="#df0623"
                app:pageColor="#fff"
                app:snap="false" />
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>